--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </section>
 
         <footer>
-            <p>© 2024 Jan Kowalski</p>
+            <p>Stronę wykonał Adrian Skonieczko klasa 4D</p>
         </footer>
     </div>
 </body>
