--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </section>
 
         <footer>
-            <p>Stronę wykonał Adrian Skonieczko klasa 4D</p>
+            <p><h1> Stronę wykonał Adrian Skonieczko klasa 4D </h1></p>
         </footer>
     </div>
 </body>
